--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "babel": "babel src/script.js --out-file public/script-compiled.js --presets=@babel/preset-env"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/lszymanski7/boilerplate-js/issues"
   },
-  "homepage": "https://github.com/lszymanski7/boilerplate-js#readme"
+  "homepage": "https://github.com/lszymanski7/boilerplate-js#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.0",
+    "@babel/preset-env": "^7.18.0"
+  }
 }
