--- a/.prettierignore
+++ b/.prettierignore
@@ -1,24 +1,23 @@
 # Dependencies
 /node_modules
-/.pnp
-.pnp.js
+
+# Build
+/dist
 
 # Testing
 /coverage
 
-# Production
-/build
-/dist
-
-# Misc.
-.DS_Store
-.env.local
+# Dotenv
+.env
 .env.development.local
-.env.production.local
 .env.test.local
-/docs
+.env.production.local
+.env.local
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Misc.
+.DS_Store
