--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,46 @@
 		"no-duplicate-imports": "warn",
 		"prefer-const": "warn"
 	},
+	"overrides": [
+		{
+			"env": {
+				"jest": true
+			},
+			"extends": [
+				"plugin:jest/recommended"
+			],
+			"files": [
+				"**/*.test.js"
+			],
+			"plugins": [
+				"jest"
+			],
+			"rules": {
+				"jest/max-nested-describe": [
+					"error",
+					{
+						"max": 5
+					}
+				],
+				"jest/no-test-return-statement": "error",
+				"jest/prefer-comparison-matcher": "warn",
+				"jest/prefer-equality-matcher": "warn",
+				"jest/prefer-lowercase-title": [
+					"warn",
+					{
+						"ignore": [
+							"describe",
+							"test"
+						]
+					}
+				],
+				"jest/prefer-to-be": "warn",
+				"jest/prefer-to-contain": "warn",
+				"jest/prefer-to-have-length": "warn",
+				"jest/require-to-throw-message": "warn"
+			}
+		}
+	],
 	"settings": {
 		"import/resolver": {
 			"webpack": {
@@ -28,6 +68,9 @@
 					".js"
 				]
 			}
+		},
+		"jest": {
+			"version": "detect"
 		}
 	}
 }
