--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,27 @@
+# IDE / Code Editor
+.idea
+.vscode
+
 # Dependencies
 /node_modules
+/.pnp
+.pnp.js
 
 # Build
+/build
+
+# Distribution
 /dist
 
 # Testing
 /coverage
 
-# Dotenv
+# Environments
 .env
-.env.development.local
-.env.test.local
-.env.production.local
 .env.local
+.env.development.local
+.env.production.local
+.env.test.local
 
 # Logs
 npm-debug.log*
