--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
 	},
 	"homepage": "https://github.com/lszymanski7/boilerplate-js#readme",
 	"dependencies": {
-		"express": "^4.18.1",
-		"normalize.css": "^8.0.1"
+		"@csstools/normalize.css": "^12.0.0",
+		"express": "^4.18.1"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.18.10",
