--- a/.prettierignore
+++ b/.prettierignore
@@ -7,13 +7,13 @@
 /.pnp
 .pnp.js
 
-# Distribution
-/dist
+# Compilation
+/build
 
 # Testing
 /coverage
 
-# Environments
+# Environment Variables
 .env
 .env.local
 .env.development.local
@@ -21,6 +21,8 @@
 .env.test.local
 
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
