--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,9 @@
     "plugins": ["import"],
     "rules": {
         "no-duplicate-imports": "warn",
-        "prefer-const": "warn"
+        "no-self-compare": "warn",
+        "no-var": "error",
+        "prefer-const": "error"
     },
     "overrides": [
         {
@@ -41,8 +43,7 @@
                 ],
                 "jest/prefer-to-be": "warn",
                 "jest/prefer-to-contain": "warn",
-                "jest/prefer-to-have-length": "warn",
-                "jest/require-to-throw-message": "warn"
+                "jest/prefer-to-have-length": "warn"
             }
         }
     ],
