--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "main": "src/index.js",
     "private": true,
     "scripts": {
-        "build:dev": "webpack --config config/webpack.dev.js",
-        "build:prod": "webpack --config config/webpack.prod.js",
+        "build": "webpack --config config/webpack.prod.js",
         "dev-server": "webpack serve --config config/webpack.dev.js",
         "eslint:check": "npx eslint .",
         "eslint:fix": "npx eslint --fix .",
