--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,11 @@
         "es2022": true,
         "node": true
     },
-    "extends": ["eslint:recommended", "plugin:import/recommended", "prettier"],
+    "extends": [
+        "eslint:recommended", 
+        "plugin:import/recommended", 
+        "prettier"
+    ],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
