--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "main": "src/scripts/index.js",
     "private": true,
     "scripts": {
-        "build": "webpack --config webpack/webpack.prod.js",
-        "dev-server": "webpack serve --config webpack/webpack.dev.js",
+        "build": "webpack --config config/webpack/webpack.prod.js",
+        "dev-server": "webpack serve --config config/webpack/webpack.dev.js",
         "eslint:check": "npx eslint .",
         "eslint:fix": "npx eslint --fix .",
         "heroku-postbuild": "npm run build:prod",
         "prettier:check": "npx prettier --check .",
         "prettier:fix": "npx prettier --write .",
         "start": "node server/server.js",
-        "test": "jest --config jest.config.js",
-        "test:coverage": "jest --config jest.config.js --coverage",
-        "test:watch": "jest --config jest.config.js --watch"
+        "test": "jest --config config/jest/jest.config.js",
+        "test:coverage": "jest --config config/jest/jest.config.js --coverage",
+        "test:watch": "jest --config config/jest/jest.config.js --watch"
     },
     "repository": {
         "type": "git",
@@ -43,7 +43,7 @@
         "eslint": "^8.21.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jest": "^26.7.0",
+        "eslint-plugin-jest": "^27.0.1",
         "html-loader": "^4.1.0",
         "html-webpack-plugin": "^5.5.0",
         "jest": "^29.0.1",
