--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "dev-server": "webpack serve --config config/webpack/webpack.dev.js",
         "eslint:check": "npx eslint .",
         "eslint:fix": "npx eslint --fix .",
-        "heroku-postbuild": "npm run build:prod",
+        "heroku-postbuild": "npm run build",
         "prettier:check": "npx prettier --check .",
         "prettier:fix": "npx prettier --write .",
         "start": "node server/server.js",
@@ -33,8 +33,8 @@
     },
     "devDependencies": {
         "@babel/cli": "^7.18.10",
-        "@babel/core": "^7.18.10",
-        "@babel/preset-env": "^7.18.10",
+        "@babel/core": "^7.19.0",
+        "@babel/preset-env": "^7.19.0",
         "babel-jest": "^29.0.2",
         "babel-loader": "^8.2.5",
         "copy-webpack-plugin": "^11.0.0",
@@ -50,13 +50,13 @@
         "jest-environment-jsdom": "^29.0.2",
         "mini-css-extract-plugin": "^2.6.1",
         "prettier": "^2.7.1",
-        "sass": "^1.54.8",
+        "sass": "^1.54.9",
         "sass-loader": "^13.0.0",
         "style-loader": "^3.3.1",
         "terser-webpack-plugin": "^5.3.3",
         "webpack": "^5.72.1",
         "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.9.0",
+        "webpack-dev-server": "^4.11.0",
         "webpack-merge": "^5.8.0"
     },
     "browserslist": {
