--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -21,8 +21,7 @@
             "files": ["**/*.css", "**/*.scss"],
             "options": {
                 "semi": true,
-                "tabWidth": 2,
-                "useTabs": false
+                "tabWidth": 2
             }
         }
     ]
