--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "boilerplate-js",
     "version": "1.0.0",
-    "description": "Boilerplate for creating projects in the JavaScript programming language. It includes the basic configuration of tools such as Webpack, Babel, Jest, Express, ESLint and Prettier.",
+    "description": "A boilerplate designed to speed up the process of building new projects in the JavaScript programming language. It includes the basic configuration of tools such as Webpack, Babel, Jest, ESLint and Prettier.",
     "author": "Łukasz Szymański",
     "license": "MIT",
     "main": "src/scripts/index.js",
