--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,7 +1,5 @@
 {
-  "presets": [
-    "@babel/preset-env"
-  ],
+  "presets": ["@babel/preset-env"],
   "plugins": [
     "@babel/plugin-transform-class-properties",
     "@babel/plugin-transform-object-rest-spread"
