--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prettier:check": "npx prettier --check .",
     "prettier:fix": "npx prettier --write .",
     "start": "node server/server.js",
+    "stylelint:check": "stylelint **/*.scss --allow-empty-input",
+    "stylelint:fix": "stylelint --fix **/*.scss --allow-empty-input",
     "test": "jest --config config/jest/jest.config.js",
     "test:coverage": "jest --config config/jest/jest.config.js --coverage",
     "test:watch": "jest --config config/jest/jest.config.js --watch"
@@ -53,6 +55,9 @@
     "sass": "^1.70.0",
     "sass-loader": "^14.1.0",
     "style-loader": "^3.3.4",
+    "stylelint": "^16.2.1",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-recommended-scss": "^14.0.0",
     "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
